--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jade": "~1.11.0",
     "mongoose": "^4.5.10",
     "morgan": "~1.7.0",
+    "readline": "^1.3.0",
     "serve-favicon": "~2.3.0"
   }
 }
