--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^7.4.1",
     "mongoose": "^4.5.10",
     "morgan": "~1.7.0",
     "readline": "^1.3.0",
