--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node ./bin/www"
   },
   "engines": {
-    "node": "~6.2.2",
+    "node": "~8.1.4",
     "npm": "~3.9.5"
   },
   "dependencies": {
@@ -15,6 +15,7 @@
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
+    "dotenv": "^4.0.0",
     "express": "~4.13.4",
     "jade": "~1.11.0",
     "jsonwebtoken": "^7.4.1",
