--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^7.4.1",
     "mongoose": "^4.5.10",
     "morgan": "~1.7.0",
+    "passport-local": "^1.0.0",
     "readline": "^1.3.0",
     "request": "^2.75.0",
     "serve-favicon": "~2.3.0",
