--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "debug": "~2.2.0",
     "dotenv": "^4.0.0",
     "express": "~4.13.4",
+    "express-jwt": "^5.3.0",
     "jade": "~1.11.0",
     "jsonwebtoken": "^7.4.1",
     "mongoose": "^4.5.10",
     "morgan": "~1.7.0",
+    "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "readline": "^1.3.0",
     "request": "^2.75.0",
